# colossal-code

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Cargo.toml  PRD.md  README.md  flake.nix  hello_world.txt  plan.txt  progress.txt  run_ralphy_autoloop.sh  test_keys.rs
crates/agent_core/: .gitignore  .gitmodules  Cargo.toml  system_prompt.txt
crates/agent_core/crates/sessionizer.bak/tools/src/: main.rs
crates/agent_core/crates/sessionizer/crates/chunker/: Cargo.toml
crates/agent_core/crates/sessionizer/crates/chunker/src/: javascript.rs  python.rs  rust.rs  typescript.rs
crates/agent_core/crates/sessionizer/crates/sandbox/: Cargo.toml
crates/agent_core/crates/sessionizer/crates/sandbox/src/: protocol.rs  tests.rs
crates/agent_core/crates/sessionizer/crates/semantic-search/src/: main.rs
crates/agent_core/crates/sessionizer/src/: error.rs  spawn.rs  types.rs
crates/agent_core/crates/sessionizer/tools/: Cargo.toml
crates/agent_core/crates/sessionizer/tools/src/: main.rs
crates/agent_core/docs/: CHANGES.md  CONFIGURATION.md  CONFIG_SYSTEM.md  QUICK_REFERENCE.md  README.md  README_CONFIG.md  SANDBOX.md  SANDBOX_UNIFICATION.md  SECURITY.md  SHELL_READINESS_FIX.md  TOOL_MODES.md  USAGE_EXAMPLES.md  WEB_SEARCH.md  WEB_SEARCH_IMPLEMENTATION.md
crates/agent_core/examples/: custom_tools.rs  test_agent_flow.rs  test_shell.rs  test_yaml_output.rs
crates/agent_core/scripts/: test_sandbox.sh  test_shell_persistence.sh
crates/agent_core/src/: a2a.rs  agent.rs  agent_bootstrap.rs  agent_state.rs  config.rs  conversation.rs  exec_command.rs  exec_command_tests.rs  execution_env.rs  lib.rs  llm_backend.rs  main.rs.old  message_helpers.rs  message_types.rs  model_config.rs  orchestrator.rs  orchestrator_support.rs  orchestrator_tests.rs  safety_config.rs  shell_session.rs  step_execution.rs  summary.rs  summary_tests.rs  thinking_helpers.rs  thinking_summarizer.rs  tool_dispatch.rs  tools.rs  web_search.rs
crates/agent_core/src/llm_backend/: anthropic.rs  backend_profile.rs  claude_auth.rs  message_adapter.rs  openai_auth.rs  openai_options.rs  openai_stream.rs  openai_wire.rs  responses.rs
crates/agent_core/tests/: exec_command_timeout_recovery.rs  immediate_safety_update.rs  isolated_execution_root.rs  managed_nu_save_builtin.rs  streamed_exec_command_managed_nu.rs  streamed_exec_command_pty.rs
crates/agent_protocol/: Cargo.toml  README.md
crates/agent_protocol/src/: client.rs  error.rs  jsonrpc.rs  lib.rs  server.rs
crates/agent_protocol/src/types/: agent_card.rs  artifact.rs  message.rs  mod.rs  push_notification.rs  spec.rs  task.rs
crates/mistralrs-server/: CHANGELOG.md  Cargo.toml  Makefile  README.md
crates/mistralrs-server/config/: dev.toml
crates/mistralrs-server/crates/mistralrs-server-api/: Cargo.toml
crates/mistralrs-server/crates/mistralrs-server-api/src/: lib.rs  openai_routes.rs
crates/mistralrs-server/crates/mistralrs-server-config/: Cargo.toml
crates/mistralrs-server/crates/mistralrs-server-config/src/: lib.rs
crates/mistralrs-server/crates/mistralrs-server-core/: Cargo.toml
crates/mistralrs-server/crates/mistralrs-server-core/src/: engine.rs  lib.rs  metrics.rs  runtime.rs  streams.rs  translate.rs
crates/mistralrs-server/crates/mistralrs-server-scheduler/: Cargo.toml
crates/mistralrs-server/crates/mistralrs-server-scheduler/src/: lib.rs
crates/mistralrs-server/crates/mistralrs-server-tests/: Cargo.toml
crates/mistralrs-server/crates/mistralrs-server-tests/tests/: integration.rs  property.rs  smoke.rs
crates/mistralrs-server/mistralrs-server/: Cargo.toml
crates/mistralrs-server/mistralrs-server/src/: main.rs
crates/sandbox/: Cargo.toml  README.md
crates/sandbox/examples/: sandbox_usage.rs
crates/sandbox/src/: error.rs  landlock.rs  lib.rs  tests.rs
crates/sessionizer/: CHUNKING.md  Cargo.toml  QWEN.md  README.md  SANDBOX.md  build.rs
crates/sessionizer/examples/: test_tools_daemon.rs
crates/sessionizer/src/: bundled_nu.rs  error.rs  hash_id.rs  landlock.rs  lib.rs  linux_sandbox.rs  main.rs  managed_nu.rs  manager.patch  manager.rs  manager_test.rs  osc133.rs  protocol.rs  pty.rs  restricted_read_only_platform_defaults.sbpl  safety.rs  sandboxing.rs  search_results.rs  seatbelt.rs  seatbelt_base_policy.sbpl  semantic_search.rs  semantic_search_lib.rs  session.rs  session_backup.rs  shell.rs  tools.rs  tools.rs.bak  types.rs  utils.rs  vendored_bwrap.rs  windows_sandbox.rs
crates/sessionizer/src/windows_sandbox/: acl.rs  cap.rs  conpty.rs  env.rs  firewall.rs  path_normalization.rs  process.rs  token.rs  winutil.rs  workspace_acl.rs
crates/sessionizer/tests/: persistent_shell_session.rs  pty_sandbox_tests.rs  sandbox_semantics.rs  stream_exec_timeout.rs
crates/sessionizer/tests/persistent_shell_session/: basic.rs  managed_nu_aliases.rs  managed_nu_boundaries.rs  managed_nu_config.rs  managed_nu_cwd.rs  managed_nu_defs.rs  managed_nu_defs_aliases.rs  managed_nu_env.rs  managed_nu_fork_eval.rs  managed_nu_rotation.rs  managed_nu_variables.rs  osc133_completion.rs  sandbox_policy.rs
crates/sessionizer/tools/src/: main.rs
crates/todo-app/: Cargo.toml  README.md
crates/todo-app/src/: cli.rs  main.rs  storage.rs  todo.rs
docs/: ARCHITECTURE_MODULE_BOUNDARIES.md  architecture.mdx  data.json  development.mdx  index.mdx  reference.mdx
nix/: checks.nix  cocode.nix  devShells.nix
scripts/: checkpoint_state.sh  verify_regression.sh
src/: agent_stream_reducer.rs  command_runtime.rs  config_model_helpers.rs  draw_internal_render_helpers.rs  git_ops.rs  input_helpers.rs  key_panel_dispatcher.rs  main.rs  main_tests.rs  message_render_helpers.rs  model_context.rs  panel_renderers.rs  pending_actions_reducer.rs  rewind_compaction_helpers.rs  rich_editor.rs  session_lifecycle.rs  session_manager.rs  session_subagent_render_helpers.rs  slash_command_executor.rs  spec_cli.rs  spec_orchestrator_reducer.rs  spec_ui.rs  startup.rs  state_domain.rs  status_helpers.rs  submit_message_reducer.rs  survey.rs  ui_message_event.rs
tests/: architecture_docs.rs  ci_quality_gates_workflow.rs  (+8 more)
(+217 files in other folders)
