[package]
name = "cocode"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cocode"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6.5"
ratatui = "0.29.0"
unicode-width = "0.1.13"
edtui = {path= "./crates/edtui"}
cli-clipboard = "0.4.0"
rand = "0.8"
clipboard = "0.5.0"
agent_core = {path = "./crates/agent_core"}
markdown-renderer = {path = "./crates/markdown-renderer"}
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
chrono = "0.4"

[dev-dependencies]
chrono = "0.4"
agent_protocol = { path = "./crates/agent_protocol" }
insta = "1.38"

[features]
syntax-highlighting = ["edtui/syntax-highlighting"]
cuda = ["agent_core/cuda"]
flash-attn = ["cuda", "agent_core/flash-attn"]
cudnn = ["cuda", "agent_core/cudnn"]
