[package]
name = "agent_core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent_core"
path = "src/main.rs"

[lib]
name = "agent_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.31"
libc = "0.2"
mistralrs = { path = "./crates/mistral.rs/mistralrs", features = ["cuda", "cudnn", "flash-attn"] }
mistralrs-core = { path = "./crates/mistral.rs/mistralrs-core", features = ["cuda", "cudnn", "flash-attn"] }
cudarc = { git = "https://github.com/coreylowman/cudarc", rev = "d2c412731524531b7507777fa45496ff667fe718", features = ["cuda-13000"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5.0"
globset = "0.4.16"
chrono = "0.4.41"
regex = "1.11.2"
strum_macros = "0.27.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
strum = { version = "0.27.2", features = ["derive"] }
sessionizer = { path = "crates/sessionizer" }
shlex = "1.1"
once_cell = "1.20"
urlencoding = "2.1"
scraper = "0.20"
html2text = "0.12"
rayon = "1.10"

[patch.crates-io]
cudarc = { git = "https://github.com/coreylowman/cudarc", rev = "d2c412731524531b7507777fa45496ff667fe718" }
