[package]
name = "agent_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "agent_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3.31"
async-trait = "0.1"
libc = "0.2"
mistralrs = { path = "../../external/mistral.rs/mistralrs" }
mistralrs-core = { path = "../../external/mistral.rs/mistralrs-core" }
# cudarc = { git = "https://github.com/coreylowman/cudarc", rev = "d2c412731524531b7507777fa45496ff667fe718", features = ["cuda-13000"] }
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.5.0"
globset = "0.4.16"
chrono = "0.4.41"
regex = "1.11.2"
strum_macros = "0.27.2"
reqwest = { version = "0.12.23", features = ["blocking", "json", "stream"] }
futures-util = "0.3"
strum = { version = "0.27.2", features = ["derive"] }
sessionizer = { path = "../sessionizer" }
shlex = "1.1"
once_cell = "1.20"
urlencoding = "2.1"
scraper = "0.20"
html2text = "0.12"
rayon = "1.10"
tokenizers = { version = "0.21", features = ["http"] }
dirs = "5.0"
toml = "0.8"
uuid = { version = "1.10", features = ["v4"] }
either = "1.15.0"
indexmap = "2.12.1"
agent_protocol = { path = "../agent_protocol" }
tracing = "0.1"

[features]
default = []
cuda = ["mistralrs/cuda", "mistralrs-core/cuda"]
flash-attn = [
    "cuda",
    "mistralrs/flash-attn",
    "mistralrs-core/flash-attn",
]
cudnn = ["cuda", "mistralrs/cudnn", "mistralrs-core/cudnn"]

# [patch.crates-io]
# cudarc = { git = "https://github.com/coreylowman/cudarc", rev = "d2c412731524531b7507777fa45496ff667fe718" }
