[package]
name = "agent_protocol"
version = "0.1.0"
edition = "2024"
description = "A2A (Agent-to-Agent) protocol implementation for Rust"

[lib]
name = "agent_protocol"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# HTTP server (A2A server)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client (A2A client)
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
base64 = "0.22"
async-stream = "0.3"

[features]
default = []
server = []
client = []
