[workspace]
members = [
    ".", "tools",
]

[package]
name = "sessionizer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "colossal-linux-sandbox"
path = "src/main.rs"

[[bin]]
name = "integration-test"
path = "src/bin/integration_test.rs"

[[bin]]
name = "file-watcher-test"
path = "src/bin/file_watcher_test.rs"

[lib]
name = "colossal_linux_sandbox"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_bytes = "0.11"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time", "process", "fs", "io-util"] }
async-channel = "2.3"
shlex = "1.3"
uuid = { version = "1", features = ["serde", "v4"] }
portable-pty = "0.8"
sessionizer-sandbox = { path = "../sandbox" }
chunker = { path = "../chunker" }
shellexpand = "3.1"
rayon = "1.11.0"
qdrant-client = "1.14.0"
walkdir = "2.5.0"
indicatif = "0.18.0"
actix-web = "4.11.0"
futures = "0.3.31"
log = "0.4.27"
glob = "0.3.3"
env_logger = "0.11.8"
notify = "6.1.1"
tempfile = "3.13"
regex = "1.11"
strip-ansi-escapes = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
landlock = "0.4.1"
libc = "0.2.175"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.175"
whoami = "1.5"

[dev-dependencies]
tempfile = "3.13"
pretty_assertions = "1.4"
