[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI todo app with SQLite storage, colored output, due dates, and priority levels"
authors = ["Developer"]
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# Colored terminal output (optional)
colored = { version = "2.1", optional = true }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal styling and widgets (for TUI elements)
console = "0.15"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["colored"]
tui = []  # Feature for future TUI enhancements