[package]
name = "mistralrs-server-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
prometheus.workspace = true
dashmap.workspace = true
mistralrs-server-core = { path = "../mistralrs-server-core" }
mistralrs-server-config = { path = "../mistralrs-server-config" }

[features]
default = []
mock-manager = ["mistralrs-server-core/mock-manager"]
