[package]
name = "mistralrs-server-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
validator.workspace = true
tokio.workspace = true
num_cpus.workspace = true
humantime-serde.workspace = true
mistralrs-core.workspace = true
upstream-mistralrs-server-core = { package = "mistralrs-server-core", path = "../../../../external/mistral.rs/mistralrs-server-core" }
