[package]
name = "mistralrs-server-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
serde.workspace = true
tracing.workspace = true
mistralrs-server-core = { path = "../mistralrs-server-core" }
dashmap.workspace = true
prometheus.workspace = true

[dev-dependencies]
tokio.workspace = true
