[package]
name = "mistralrs-server-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
mistralrs-server-api = { path = "../mistralrs-server-api" }
mistralrs-server-core = { path = "../mistralrs-server-core" }
mistralrs-server-config = { path = "../mistralrs-server-config" }
tower.workspace = true
hyper.workspace = true
async-trait.workspace = true
mistralrs-core.workspace = true
rand.workspace = true
toml.workspace = true

[features]
default = []
mock-manager = ["mistralrs-server-core/mock-manager", "mistralrs-server-api/mock-manager"]
real-manager = []
