[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
globset = "0.4.16"
owo-colors = "4.2.2"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tabled = "0.20.0"
walkdir = "2.5.0"
