[package]
name = "chunker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.25.6"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
